--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に家庭科室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+          <p class="text-center">三ヶ月前、クラスメイトのもかが原因不明の昏睡状態になり入院することになってしまいました。<br>
+            それから彼女の目が覚める兆しはなく、もかの親友であるあなたは彼女の心配して毎日お見舞いに行っていました。<br>
+            「二度と目を覚まさないかもしれない」そんな不安を抱える中、<br>
+            あなたは最寄りの神社に「もかとまた一緒に話したい」とお願いします。<br>
+            その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
+            病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
+            <br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
