--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             あなたは最寄りの神社に「もかとまた一緒に話したい」とお願いします。<br>
             その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
             病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
-            <br>
+            その衝撃で、あなたは意識を手放してしまいました・・・<br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
