--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
             病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
             その衝撃で、あなたは意識を手放してしまいました・・・<br>
-          <div class="story__note__outer bg-color--gray">
+          <div class="story__note__outer bg-color--red">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>あなたはもかの意識の中に入り込みました</li>
+              <li>１時間を超えるともかを助け出せなくなります</li>
             </ul>
           </div>
           <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
