--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
             病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
             その衝撃で、あなたは意識を手放してしまいました・・・<br>
-          <div class="story__note__outer bg-color--gray">
+          <div class="story__note__outer bg-color--red">
             <ul class="story__note">
               <li>あなたはもかの意識の中に入り込みました</li>
               <li>１時間を超えるともかを助け出せなくなります</li>
