--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
             病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
             その衝撃で、あなたは意識を手放してしまいました・・・<br>
-          <div class="story__note__outer bg-color--red">
+          <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>あなたはもかの意識の中に入り込みました</li>
               <li>１時間を超えるともかを助け出せなくなります</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">目を開けると、あなたは<br>
+            自分が森の中に立っていることに気づきました</p>
         </div>
       </div>
     </section>
