--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
             その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
             病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
             その衝撃で、あなたは意識を手放してしまいました・・・<br>
+            そして目を開けると、あなたは<br>
+            自分が森の中に立っていることに気づきました<br>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>あなたはもかの意識の中に入り込みました</li>
               <li>１時間を超えるともかを助け出せなくなります</li>
             </ul>
           </div>
-          <p class="text-center">目を開けると、あなたは<br>
-            自分が森の中に立っていることに気づきました</p>
+         
         </div>
       </div>
     </section>
