--- a/main.html
+++ b/main.html
@@ -140,7 +140,7 @@ Youtube貼り付けここまで -->
                 </div><!-- /.column -->
                 <!-- STAGE2-1　ここまで -->
 
-
+<!-- STAGE2-2　ここから -->
 
                 <div class="column">
 
