--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             それから彼女の目が覚める兆しはなく、もかの親友であるあなたは彼女の心配して毎日お見舞いに行っていました。<br>
             「二度と目を覚まさないかもしれない」そんな不安を抱える中、<br>
             あなたは最寄りの神社に「もかとまた一緒に話したい」とお願いします。<br>
-            その後お見舞いに行ったあなたは、偶然清掃中の床に足を滑らせ、<br>
+            その後お見舞いに行ったあなたは、偶然床に足を滑らせ、<br>
             病院用ベッドで眠ってるもかと頭をぶつけてしまいます<br>
             その衝撃で、あなたは意識を手放してしまいました・・・<br>
+            <br>
             そして目を開けると、あなたは<br>
             自分が森の中に立っていることに気づきました<br>
           <div class="story__note__outer bg-color--gray">
