--- a/main.html
+++ b/main.html
@@ -34,8 +34,10 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">どうやらここは<br>
-              下の画像の謎を解き、鍵のありかをキーワード欄に入力しよう。</p>
+            <p class="text-center">どうやらこの森は私の通う学校の裏山のようだ<br>
+              あたりを見渡そうとして展望台へ向かうと<br>
+              不自然に綺麗な紙が落ちていた。<br>
+            </p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -85,7 +87,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">答えは友人の名前だった<br>
+              <div class="clear-message__content">紙の謎の答えは友人の名前だった<br>
                この答えの意図は不明だが<br>
                手がかりを見つけるためにもかの家に向かった</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
