--- a/main.html
+++ b/main.html
@@ -184,7 +184,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">日記の中には、もかの文字で<br>
+              <div class="clear-message__content">本棚の赤い本の中に鍵があった。<br>
+                日記の中には、もかの文字で<br>
                 「屋上で待ってるよ」と書いてあった<br>
                何か嫌な予感がする、すぐに行かなければ！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
