--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>夢の中からの脱出 │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -22,9 +22,9 @@
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
-          <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <h2 class="section-title--border">屋上についた</h2>
+          <p class="text-center">正解の鍵を見つけ、屋上に入ることができた。<br>
+            そこには、屋上から飛び降りようとするもかがいた</p>
         </div>
       </div>
     </section>
@@ -44,8 +44,8 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
+        <p class="text-center">止めようとしてもかの手を掴んだ瞬間、<br>
+          頭に強い衝撃を感じ、意識を手放しました<br>
           この教訓をしっかり思い出してくれ。</p>
         <p class="text-center">それでは、また会おう！</p>
       </div>
