--- a/final.html
+++ b/final.html
@@ -22,9 +22,11 @@
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
-          <h2 class="section-title--border">屋上についた</h2>
+          <h2 class="section-title--border">屋上</h2>
           <p class="text-center">正解の鍵を見つけ、屋上に入ることができた。<br>
-            そこには、屋上から飛び降りようとするもかがいた</p>
+            そこには、屋上から飛び降りようとするもかがいた<br>
+          そして、止めようとしてもかの手を掴んだ瞬間、<br>
+          頭に強い衝撃を感じ、意識を手放した。</p>
         </div>
       </div>
     </section>
@@ -44,10 +46,10 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">止めようとしてもかの手を掴んだ瞬間、<br>
-          頭に強い衝撃を感じ、意識を手放しました<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">再び目を覚ますと<br>
+          そこはもかが入院していた病室でした<br>
+          そしてその数分後</p>
+        <p class="text-center">もかは目を覚ましました</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
